--- a/Food Delivery App/Food Delivery App/Modules/Home/Cell/FoodCell/FoodTableViewCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Home/Cell/FoodCell/FoodTableViewCell.xib
@@ -20,7 +20,7 @@
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Osz-ob-xz9">
                         <rect key="frame" x="0.0" y="0.0" width="267" height="273"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="backgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zkZ-EP-i5p">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -29,6 +29,7 @@
                         </collectionViewFlowLayout>
                     </collectionView>
                 </subviews>
+                <color key="backgroundColor" name="backgroundColor"/>
                 <constraints>
                     <constraint firstItem="Osz-ob-xz9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="D9h-Ip-YR3"/>
                     <constraint firstAttribute="trailing" secondItem="Osz-ob-xz9" secondAttribute="trailing" id="IHv-et-aOi"/>
