--- a/Food Delivery App/Food Delivery App/Modules/Detail/Cell/QuantityCell/QuantityTableItemCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Detail/Cell/QuantityCell/QuantityTableItemCell.xib
@@ -16,49 +16,77 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="67" id="KGk-i7-Jjw" customClass="QuantityTableItemCell" customModule="Food_Delivery_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="155" id="KGk-i7-Jjw" customClass="QuantityTableItemCell" customModule="Food_Delivery_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="155"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="155"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minimumValue="1" maximumValue="1000" translatesAutoresizingMaskIntoConstraints="NO" id="TbB-kM-vfx">
-                        <rect key="frame" x="210" y="17.666666666666664" width="94" height="31.666666666666664"/>
+                        <rect key="frame" x="210" y="17.666666666666664" width="94" height="119.66666666666669"/>
                         <connections>
                             <action selector="stepperChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="UGj-Ii-2jh"/>
                         </connections>
                     </stepper>
                     <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="1" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QQg-NW-9NN">
-                        <rect key="frame" x="16" y="11.666666666666664" width="100" height="44"/>
+                        <rect key="frame" x="16" y="16" width="100" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="1wT-OA-OhS"/>
                             <constraint firstAttribute="width" constant="100" id="una-Lp-H1H"/>
                         </constraints>
-                        <color key="textColor" name="gray01"/>
+                        <color key="textColor" name="textColor"/>
                         <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I0Z-Ps-KYM">
+                        <rect key="frame" x="16" y="78" width="288" height="48"/>
+                        <color key="backgroundColor" name="backgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="48" id="gjV-RY-REx"/>
+                        </constraints>
+                        <color key="tintColor" name="primaryColor"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" title="Add To Cart">
+                            <color key="baseForegroundColor" name="primaryColor"/>
+                        </buttonConfiguration>
+                        <connections>
+                            <action selector="buttonAddClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7m2-Bk-pEq"/>
+                        </connections>
+                    </button>
                 </subviews>
+                <color key="backgroundColor" name="backgroundColor"/>
                 <constraints>
+                    <constraint firstItem="I0Z-Ps-KYM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="KDP-lS-UYb"/>
+                    <constraint firstAttribute="trailing" secondItem="I0Z-Ps-KYM" secondAttribute="trailing" constant="16" id="MCb-Yz-NxC"/>
                     <constraint firstItem="TbB-kM-vfx" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NzY-sc-xkN"/>
                     <constraint firstItem="QQg-NW-9NN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Pd6-X5-xAL"/>
+                    <constraint firstItem="I0Z-Ps-KYM" firstAttribute="top" secondItem="QQg-NW-9NN" secondAttribute="bottom" constant="18" id="nmK-8h-oTD"/>
+                    <constraint firstItem="QQg-NW-9NN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="oig-f3-dQ2"/>
                     <constraint firstAttribute="bottom" secondItem="TbB-kM-vfx" secondAttribute="bottom" constant="17.666666666666671" id="qvd-gW-pvT"/>
                     <constraint firstItem="TbB-kM-vfx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17.666666666666671" id="rDt-6L-2dh"/>
                     <constraint firstAttribute="trailing" secondItem="TbB-kM-vfx" secondAttribute="trailing" constant="16" id="uEa-5k-hkF"/>
-                    <constraint firstItem="QQg-NW-9NN" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ub9-cp-jJM"/>
+                    <constraint firstAttribute="bottom" secondItem="I0Z-Ps-KYM" secondAttribute="bottom" constant="29" id="vSb-AW-oec"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" name="backgroundColor"/>
             <connections>
+                <outlet property="buttonAdd" destination="I0Z-Ps-KYM" id="31I-Eq-gGE"/>
                 <outlet property="quantityTextField" destination="QQg-NW-9NN" id="bv1-4X-WIL"/>
             </connections>
-            <point key="canvasLocation" x="123.66412213740458" y="27.816901408450704"/>
+            <point key="canvasLocation" x="123.66412213740458" y="58.802816901408455"/>
         </tableViewCell>
     </objects>
     <resources>
-        <namedColor name="gray01">
-            <color red="0.14900000393390656" green="0.19599999487400055" blue="0.2199999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="backgroundColor">
+            <color red="0.99999994039535522" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="primaryColor">
+            <color red="0.016000000759959221" green="0.56099998950958252" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="textColor">
+            <color red="0.32941176470588235" green="0.43137254901960786" blue="0.47843137254901957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
