--- a/Food Delivery App/Food Delivery App/Modules/Order/OrderViewController.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Order/OrderViewController.xib
@@ -25,7 +25,7 @@
     </objects>
     <resources>
         <namedColor name="backgroundColor">
-            <color red="0.99999994039535522" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
