--- a/Food Delivery App/Food Delivery App/Modules/Detail/Cell/QuantityCell/QuantityTableItemCell.xib
+++ b/Food Delivery App/Food Delivery App/Modules/Detail/Cell/QuantityCell/QuantityTableItemCell.xib
@@ -39,8 +39,15 @@
                         <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ylY-zu-PrS">
+                        <rect key="frame" x="16" y="76" width="288" height="1"/>
+                        <color key="backgroundColor" name="gray10"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="PdR-6A-IA4"/>
+                        </constraints>
+                    </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I0Z-Ps-KYM">
-                        <rect key="frame" x="16" y="78" width="288" height="48"/>
+                        <rect key="frame" x="16" y="93" width="288" height="48"/>
                         <color key="backgroundColor" name="backgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="48" id="gjV-RY-REx"/>
@@ -58,15 +65,18 @@
                 <color key="backgroundColor" name="backgroundColor"/>
                 <constraints>
                     <constraint firstItem="I0Z-Ps-KYM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="KDP-lS-UYb"/>
+                    <constraint firstAttribute="bottom" secondItem="I0Z-Ps-KYM" secondAttribute="bottom" constant="14" id="LQl-T4-VIV"/>
                     <constraint firstAttribute="trailing" secondItem="I0Z-Ps-KYM" secondAttribute="trailing" constant="16" id="MCb-Yz-NxC"/>
                     <constraint firstItem="TbB-kM-vfx" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NzY-sc-xkN"/>
+                    <constraint firstItem="ylY-zu-PrS" firstAttribute="trailing" secondItem="TbB-kM-vfx" secondAttribute="trailing" id="OW5-uf-AKh"/>
                     <constraint firstItem="QQg-NW-9NN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Pd6-X5-xAL"/>
-                    <constraint firstItem="I0Z-Ps-KYM" firstAttribute="top" secondItem="QQg-NW-9NN" secondAttribute="bottom" constant="18" id="nmK-8h-oTD"/>
+                    <constraint firstItem="I0Z-Ps-KYM" firstAttribute="top" secondItem="ylY-zu-PrS" secondAttribute="bottom" constant="16" id="e09-eL-75Q"/>
                     <constraint firstItem="QQg-NW-9NN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="oig-f3-dQ2"/>
                     <constraint firstAttribute="bottom" secondItem="TbB-kM-vfx" secondAttribute="bottom" constant="17.666666666666671" id="qvd-gW-pvT"/>
+                    <constraint firstItem="ylY-zu-PrS" firstAttribute="top" secondItem="QQg-NW-9NN" secondAttribute="bottom" constant="16" id="qxz-Oq-NlZ"/>
                     <constraint firstItem="TbB-kM-vfx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17.666666666666671" id="rDt-6L-2dh"/>
                     <constraint firstAttribute="trailing" secondItem="TbB-kM-vfx" secondAttribute="trailing" constant="16" id="uEa-5k-hkF"/>
-                    <constraint firstAttribute="bottom" secondItem="I0Z-Ps-KYM" secondAttribute="bottom" constant="29" id="vSb-AW-oec"/>
+                    <constraint firstItem="ylY-zu-PrS" firstAttribute="leading" secondItem="QQg-NW-9NN" secondAttribute="leading" id="z9e-Xq-l0b"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -80,13 +90,16 @@
     </objects>
     <resources>
         <namedColor name="backgroundColor">
-            <color red="0.99999994039535522" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="gray10">
+            <color red="0.81199997663497925" green="0.84700000286102295" blue="0.86299997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="primaryColor">
             <color red="0.016000000759959221" green="0.56099998950958252" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="textColor">
-            <color red="0.32941176470588235" green="0.43137254901960786" blue="0.47843137254901957" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.32899999618530273" green="0.4309999942779541" blue="0.4779999852180481" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
